# ChangeLog for games-fps/quake3
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/quake3/ChangeLog,v 1.64 2013/01/03 22:23:10 pinkbyte Exp $

  03 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> quake3-9999.ebuild:
  Set new repo address for live ebuild, wrt bug #449510

  20 Dec 2012; Agostino Sarubbo <ago@gentoo.org> quake3-1.36-r1.ebuild:
  Stable for amd64, wrt bug #447164

  25 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> quake3-1.36-r1.ebuild:
  Disable patch for jpeg unbundling, cause it is uncompleted and may cause
  graphics glitches

*quake3-1.36-r1 (07 Sep 2012)

  07 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> +quake3-1.36-r1.ebuild,
  +files/quake3-1.36-remove-bundled-jpeg.patch:
  Use system jpeg library wrt bug #430518

  13 Jul 2012; Jeff Horelick <jdhore@gentoo.org> quake3-1.36.ebuild:
  marked x86 per bug 406039

  12 Jul 2012; Agostino Sarubbo <ago@gentoo.org> quake3-1.36.ebuild:
  Stable for amd64, wrt bug #406039

  14 May 2011; Matt Turner <mattst88@gentoo.org> quake3-9999.ebuild:
  Make sure to call subversion_wc_info. Thanks to Andrey Vihrov, bug 222005.

  06 May 2011; Matt Turner <mattst88@gentoo.org> quake3-1.36.ebuild,
  quake3-9999.ebuild, metadata.xml:
  Rewritten ebuild from Andrey Vihrov. Adds curl, mumble, opengl, openal,
  voice, and vorbis USE flags (Bug 222005). Removes bundled openal, curl,
  speex, sdl, zlib, and jpeg in favor of using system libraries and headers
  (Bug 250080). Huge thanks to Andrey Vihrov!

  31 Jan 2011; Michael Sterrett <mr_bones_@gentoo.org> quake3-1.36.ebuild,
  +files/quake3-1.36-bots.patch:
  add Redhat patch to fix bot loading on 64bit (bug #353257)

  28 Nov 2010; Michael Sterrett <mr_bones_@gentoo.org> quake3-1.36.ebuild,
  quake3-9999.ebuild:
  fix KEYWORDS (bug #346329)

*quake3-1.36 (13 Nov 2010)

  13 Nov 2010; Michael Sterrett <mr_bones_@gentoo.org>
  quake3-1.34_rc3.ebuild, +quake3-1.36.ebuild, quake3-9999.ebuild: