@@ -6,6 +6,6 @@ DIST ioquake3_1.34-rc3.tar.bz2 3147694 SHA256 fb43f63178c6700f20b83634b816f77e39
 EBUILD quake3-1.34_rc3.ebuild 3039 SHA256 c44f2d7119b022bb24151597f28733a6204fded6e6d52afbca435a6392a2cfc7 SHA512 161711e387829458f779b5c41c9502d9ec7cafcae7b16914ac5c48b3909c2314b63c0314e911c1f49fa6d26f82db049fc79308042bfcdcaad45612f41b710fa1 WHIRLPOOL 35fc937a928cfa41bde2657faff6c9d6b3b898e3e1a3272a426147f1b25a3448585ad7419625f1374c447b15a4c5ad1c1ce5991b744544eca3d9a1ea24173a3e
 EBUILD quake3-1.36-r1.ebuild 3978 SHA256 1d320e84eb666bcd167f99d83342a506844f136184079046e559286be73e866d SHA512 3f76624b7577fe85f1700d6f6f99387e2eaf5b7c77fbdeee25cfaeb5197b0a97cafcd118048c4034f2b745b6c2f1fd465ccad4c6914b55c313b013566aac5c09 WHIRLPOOL bfd065812e32ebab17543f4b546f69214d6ce43b4f7c1d897877f7e6edf4fff50f57e037ddb51550bcb28db75dbe0b3200a08ec45ae29f0d5f4f758be5449c4d
 EBUILD quake3-1.36.ebuild 3895 SHA256 9dfa8dcc0c861542c785d6b7684ffc353c47de6d41bd55f6988fab09f091d744 SHA512 6eebe9ea3e34ec981d0b27d8d3e17e2b2809f5166ccba9aeb57cfb7685f6543a89d0a1dbc3727d1e6cf2fbc03a8257754487117d835691c08e824fa07b0e6153 WHIRLPOOL 4ed3ad5b5d54b5d6efbcd3d754eab62ca9dfcb612f6999ac9a65b511c6f2ffde2e83683210d8f364d1ba80315d7333635c918f27cca5ce33bf328da5a7d5a122
-EBUILD quake3-9999.ebuild 3543 SHA256 3eec1bdd34bf1afd7382e1317f092f9179f0190bdc4880cb2ac23c949c03df0b SHA512 1ade4388af82210e34c73edf914b949455a5937762aaeef2172bf81a13cf11787b6c06c84e5b424f1c43e2f086d3d75d0ef919631b3cb8698cdc5ebb1e9c525c WHIRLPOOL 5b49275b2be508dc78e3d40ebc2ad2e9496941d5efe35e2c4be5f2a99dd8acfa1297a262e355551750689c5707443ee4a555eee6f8c29b8f0825a0647414d051
-MISC ChangeLog 6683 SHA256 795cb41822fff0f4701b054beb1e3da2871cb5978617852001bf8b34675bd953 SHA512 b230342f32e6a62cea792252cd9eebd58a9ff7d63d288b6d7165d9b16e15d18a24ca14b4ea10cac8177f78c759f1ae0d70821572963db1f1a95cbe9433408385 WHIRLPOOL 059389ddd5239970170ba87d0816800a738df8bd0b129c45391024a9bb374dab4923c53165c126327d1a768285d665e75b3f317d254963b4bd8fdfd94786fcca
+EBUILD quake3-9999.ebuild 3813 SHA256 884417999d836d67c40d8b2e558a8e20e771e55d6332bba5ed0cd1c03bcabfe4 SHA512 f61a3ba266e40d7b21fa50b6dedd3c2a0e1b92a12e3d909841f6e20c3ea9bf3243ab230b17b9b611ca8a580fa7d091d73eca871960a4d0e72658dd206ca9ec22 WHIRLPOOL 7f0c50cf2317ea85f475337bd78943c1fd4cc4686e859c64dbf7a9d3984bb29593dbebdde838ef4f5e876474a585a32b43133164bae8cf598000dc4309b631ea
+MISC ChangeLog 6892 SHA256 c4facc9d1e7ab0e4666e89629a5d4e3e75fc6e57389329e01a3b041979bc5f72 SHA512 2e2d449a0b06d30fddd96d121db25bba5d959af138851a9e39e97388dbf92df8ebae5d36c0e6d2e3928a98c50ede11e5e8de269f4f1874cff9f824ceb8f6c8cb WHIRLPOOL 28c506570edbea9225865d0a01569f15460444af5035dd1458612cdc5196c60d356e3218ec99a728b3b4664601e6f01c10ba04aa3c58abae18c638bce6def2c6
 MISC metadata.xml 1187 SHA256 ded4783173bf567334634819e91ee0462c904872f723eb42674d7de9b5d514ca SHA512 de0d4036500887e723d9dbe171bc94e5a1930a2f3ff5d942a108d07249ff87eff25343430de4e1975cf948b78752096b49cf71376b64172047e1478f560cd804 WHIRLPOOL e40ec3d14524454f73e99ca89a199bbef1f5562a03560f6a7bc255a6c7fb11a31adb3108940ac32ab14e7704f20b4e53b224de3a30e545c33f8423dce3bcc0f6
